- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.13, 5.14, 5.15
 
- 
        
 - 
        973a795bec836be88eb1d19657dfad26b9aa959f (qt/qtbase/dev) 822c7b7109580fa018dde976862400ffabdf51fb (qt/qtbase/5.15)
 
The following code renders the characters incorrectly. ( See qtbug85560-sanserif.png )
    Text {
        text: "Београд"
        renderType: Text.NativeRendering
        font {
            family: "sanserif"
        }
    }
The sample project is attached (QtBug85560.zip)
This appears to be a regression, as the text renders correctly when built and ran under 5.12.
Removing the "family" from the font causes the text to render correctly, as does giving the font a large pixelsize (>50)
- relates to
 - 
                    
QTBUG-85598 [REG: 5.13 -> 5.14] Japanese character appears incorrectly
-         
 - Closed
 
 -