When finding the engine for a fallback font, then clear the families

If it is a fallback font, then it should just have family set to that
font so it does not get interference from what the families were
originally set to.

Fixes: QTBUG-85560
Change-Id: I6232f3d2ae12052fa3b0b3bc0e7f106e239a585d
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 973a795bec836be88eb1d19657dfad26b9aa959f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>